added instructions to readme and changed user pass on compose file for clarity

--- a/docker.compose.yml
+++ b/docker.compose.yml
@@ -9,8 +9,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: somewordpress
       MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password123
 
   wordpress:
     depends_on:
@@ -23,8 +23,8 @@ services:
     restart: always
     environment:
       WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_USER: user
+      WORDPRESS_DB_PASSWORD: password123
       WORDPRESS_DB_NAME: wordpress
 
   nginx:
